--- a/convert/Cargo.toml
+++ b/convert/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 clap = "4.4.11"
 graphalgs = "0.1.1"
 image = "0.24.7"
+itertools = "0.12.0"
 petgraph = "0.6.4"
 rand = "0.8.5"
+rayon = "1.8.0"
 walky = "1.1.0"
