--- a/convert/Cargo.toml
+++ b/convert/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 clap = "4.4.11"
 graphalgs = "0.1.1"
 image = "0.24.7"
+indicatif = { version = "0.17.7", features = ["rayon"] }
 itertools = "0.12.0"
 petgraph = "0.6.4"
 rand = "0.8.5"
