--- a/convert/Cargo.toml
+++ b/convert/Cargo.toml
@@ -11,6 +11,7 @@ graphalgs = "0.1.1"
 image = "0.24.7"
 indicatif = { version = "0.17.7", features = ["rayon"] }
 itertools = "0.12.0"
+ordered-float = "4.2.0"
 petgraph = "0.6.4"
 rand = "0.8.5"
 rayon = "1.8.0"
