--- a/bndbuild.yml
+++ b/bndbuild.yml
@@ -7,16 +7,18 @@
 
 - tgt: etch_a_sketch.sna etch.o etch_header.o
   dep: src/commands.asm  src/engine.asm  src/main.asm convert/*.asm small_connex.o title.o multiple.o
-  cmd: basm --sna -I src main.asm -o etch_a_sketch.sna --lst etch_a_sketch.lst --override --sym etch_a_sketch.sym
+  cmd: 
+    - basm -I src main.asm --sna -o etch_a_sketch.sna --override -DLINKED_VERSION=0
+    - basm -I src main.asm --lst etch_a_sketch.lst --sym etch_a_sketch.sym -DLINKED_VERSION=1
 
 - tgt: bootstrap.o bootstrap.sym
   dep: src/bootstrap.asm etch.o
   cmd: basm -I src bootstrap.asm --sym bootstrap.sym
 
-- tgt: ETCH4K etch4k.dsk 
+- tgt: etch4k etch4k.dsk 
   dep:  src/etch4k.asm bootstrap.o etch_header.o etch_a_sketch.sym
   cmd: 
-    - basm  -I src etch4k.asm -o ETCH4K --lst eth4k.lst
+    - basm  -I src etch4k.asm -o etch4k --lst eth4k.lst
     - extern dskmanager etch4k.dsk format --format data
     - extern dskmanager etch4k.dsk add ETCH4K
 
