Split revision logo in several parts

--- a/bndbuild.yml
+++ b/bndbuild.yml
@@ -48,8 +48,8 @@
 
 
 - tgt: pictures/revision.asm
-  dep: pictures/revision.png
-  cmd: extern ./tools/convert --euclidean pictures/revision.png pictures/revision.asm
+  dep: pictures/revisiona.png pictures/revisionb.png pictures/revisionc.png pictures/revisiond.png
+  cmd: extern ./tools/convert --euclidean pictures/revisiona.png pictures/revisionb.png pictures/revisionc.png pictures/revisiond.png pictures/revision.asm
 - tgt: revision.o
   dep: pictures/revision.asm src/commands.asm
   cmd: basm -I src pictures/revision.asm -o revision.o
