Better ordering of the pictures drawing

--- a/bndbuild.yml
+++ b/bndbuild.yml
@@ -35,12 +35,9 @@
 
 
 
-
-
-
 - tgt: pictures/baston_multiple.asm 
-  dep: pictures/bastona2.png pictures/bastonb.png pictures/bastonc.png
-  cmd: extern ./tools/convert --euclidean pictures/bastona2.png pictures/bastonb.png pictures/bastonc.png pictures/baston_multiple.asm 
+  dep: pictures/bastona2.png pictures/bastonb1.png pictures/bastonb2.png pictures/bastonc1.png pictures/bastonc2.png pictures/bastonc3.png
+  cmd: extern ./tools/convert --euclidean pictures/bastona2.png pictures/bastonb1.png pictures/bastonb2.png  pictures/bastonc3.png pictures/bastonc2.png pictures/bastonc1.png  pictures/baston_multiple.asm 
 - tgt: baston_multiple.o 
   dep: pictures/baston_multiple.asm 
   cmd: 
