--- a/bndbuild.yml
+++ b/bndbuild.yml
@@ -36,8 +36,8 @@
 
 
 - tgt: pictures/baston_multiple.asm 
-  dep: pictures/bastona2.png pictures/bastonb1.png pictures/bastonb2.png pictures/bastonc1.png pictures/bastonc2.png pictures/bastonc3.png
-  cmd: extern ./tools/convert --euclidean pictures/bastona2.png pictures/bastonb1.png pictures/bastonb2.png  pictures/bastonc3.png pictures/bastonc2.png pictures/bastonc1.png  pictures/baston_multiple.asm 
+  dep: pictures/bastona2.png pictures/bastonb1.png pictures/bastonb2.png pictures/bastonc1.png pictures/bastonc2.png pictures/bastonc3.png pictures/bastonc4.png pictures/bastonc5.png
+  cmd: extern ./tools/convert --euclidean pictures/bastona2.png pictures/bastonb1.png pictures/bastonb2.png  pictures/bastonc3.png pictures/bastonc2.png pictures/bastonc1.png pictures/bastonc4.png pictures/bastonc5.png  pictures/baston_multiple.asm 
 - tgt: baston_multiple.o 
   dep: pictures/baston_multiple.asm 
   cmd: 
